--- a/v3.0/frontend/style.css
+++ b/v3.0/frontend/style.css
@@ -93,7 +93,9 @@ div.center{
 }
 
 .responsive {
-  padding: 0 6px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-bottom: 12px;
   float: left;
   width: 24.99999%;
 }
@@ -109,4 +111,35 @@ div.center{
   .responsive {
     width: 100%;
   }
+}
+
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+}
+
+.profileButton {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
 }
