--- a/v5.0_ejs_yt/frontend/gallery.ejs
+++ b/v5.0_ejs_yt/frontend/gallery.ejs
@@ -15,6 +15,7 @@
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="editGallery.html">Edit gallery</a></li>
     <li><a href="creators.html">Creators</a></li>
+    <li><a href="addPicture.html">Add picture</a></li>
   </ul>
 
   <div class="contentDiv" id="content">
@@ -60,24 +61,6 @@
         <div class="desc">Image description</div>
       </div>
     </div>
-
-    <div id="addPicture">
-      <input type="file" id="fileInput" accept="image/*">
-    </div>
-    <div id="selectCreator">
-      <label for="creators">Choose a creator:</label>
-      <select id="creators" name="creators">
-        <option value="">Existing creators</option>
-        <option value="test1">test1</option>
-        <option value="test2">test2</option>
-      </select>
-      <a href="addCreator.html"><button>Add new creator</button></a>
-    </div>
-    <div>
-      <button>Add picture</button>
-    </div>
-  </div>
-
 </body>
 
 </html>
