--- a/v5.0_ejs_yt/frontend/addPicture.ejs
+++ b/v5.0_ejs_yt/frontend/addPicture.ejs
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<%- include('./common/header', {page_title: "Add Picture"}) -%>
 
-    <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-
-    <ul class="sidenav" id="menu">
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="editGallery.html">Edit gallery</a></li>
-        <li><a href="creators.html">Creators</a></li>
-        <li><a href="addPicture.html">Add picture</a></li>
-    </ul>
+<%- include('./common/menu') -%>
 
     <div class="contentDiv" id="content">
 
@@ -31,6 +16,7 @@
               <option value="test1">test1</option>
               <option value="test2">test2</option>
             </select>
+            <!--TODO kicserélni linket-->
             <a href="addCreator.html"><button>Add new creator</button></a>
           </div>
           <div>
@@ -39,5 +25,4 @@
         </div>
     </div>
     
-</body>
-</html>
+<%- include('./common/footer') -%>
