--- a/v5.0_ejs_yt/frontend/common/header.ejs
+++ b/v5.0_ejs_yt/frontend/common/header.ejs
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <title><%= page_title %></title>
 
-    <link rel="stylesheet" href="style.css">
+    <!--TODO nem jó css ejs óta-->
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
