--- a/v5.0_ejs_yt/frontend/editGallery.ejs
+++ b/v5.0_ejs_yt/frontend/editGallery.ejs
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('./common/header', {page_title: "Edit Gallery"}) -%>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Gallery</title>
-
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-  <ul class="sidenav" id="menu">
-    <li><a href="gallery.html">Gallery</a></li>
-    <li><a href="editGallery.html">Edit gallery</a></li>
-    <li><a href="creators.html">Creators</a></li>
-    <li><a href="addPicture.html">Add picture</a></li>
-  </ul>
+<%- include('./common/menu') -%>
 
   <div class="contentDiv" id="content">
     <h2 style="text-align:center">Edit Gallery</h2>
@@ -91,6 +75,4 @@
     </div>
   </div>
 
-</body>
-
-</html>
+<%- include('./common/footer') -%>
