4. hazi kiegeszitese, navigacio, css nem jo

--- a/v5.0_ejs_yt/frontend/addPicture.ejs
+++ b/v5.0_ejs_yt/frontend/addPicture.ejs
@@ -12,6 +12,7 @@
           <div id="selectCreator">
             <label for="creators">Choose a creator:</label>
             <select id="creators" name="creators">
+              <!--adatbázisból creator nevekkel feltölteni a optionokat-->
               <option value="">Existing creators</option>
               <option value="test1">test1</option>
               <option value="test2">test2</option>
