--- a/v5.0_ejs_yt/frontend/creators.ejs
+++ b/v5.0_ejs_yt/frontend/creators.ejs
@@ -5,11 +5,12 @@
     <div class="contentDiv" id="content">
         <h2 style="text-align:center">Creators</h2>
 
+        <!--for-->
         <div class="card">
-            <img src="" alt="Profile picture" style="width:100%">
-            <h1>Name</h1>
-            <p>Email</p>
-            <p>Number of pictures</p>
+            <img src="<%= creator_data.profile_picture %>" alt="Profile picture" style="width:100%">
+            <h1><%= creator_data.name %></h1>
+            <p><%= creator_data.email %></p>
+            <p><%= creator_data.number_of_pictures %></p>
             <p>
                 <!--TODO kicserélni linket-->
                 <a href="editCreator.html"><button class="profileButton">Edit</button></a>
