--- a/v5.0_ejs_yt/frontend/editCreator.ejs
+++ b/v5.0_ejs_yt/frontend/editCreator.ejs
@@ -12,7 +12,7 @@
               </div>
             <p><input placeholder="Name"></p>
             <p><input placeholder="Email"></p>
-            <p>Number of pictures</p>
+            <p>Number of pictures: <%= creator_data.number_of_pictures %></p>
             <div>
                 <!--TODO kicserélni linket-->
                 <a href="creators.html"><button>Cancel</button></a>
