--- a/v6.2.1_express_temp_yt/views/editCreator.ejs
+++ b/v6.2.1_express_temp_yt/views/editCreator.ejs
@@ -6,20 +6,20 @@
         <h2 style="text-align:center">Edit Creator</h2>
 
         <div class="card">
-            <form method="post" enctype="multipart/form-data">
-            <label for="profile_picture">Change profile picture (optional)</label>
+            <form method="post">
+            <label for="fileInput">Change profile picture (optional)</label>
             <div id="addPicture">
                 <input type="file" id="fileInput" accept="image/*" name="profile_picture">
             </div>
             <label for="name">Név</label>
-            <input type="text" value="<%= creator.name %>" name="name">
+            <input type="text" value="<%= creator.name %>" id="name" name="name">
             <label for="email">Email</label>
-            <input type="text" value="<%= creator.email %>" name="email">
+            <input type="text" value="<%= creator.email %>" id="email" name="email">
             <p>Number of pictures: <%= creator.number_of_pictures %></p>
             <div>
                 <button type="button" onclick="window.location.href='/creators'">Cancel</button>
                 <!--<a href="/creators">Cancel</a> ha beteszem formba, akkorn nem működik-->
-                <input type="submit" value="Update"/> <!--nem jó-->
+                <input type="submit" onclick="window.location.href='/creators'" value="Update"/> <!--nem jó-->
             </div>
             </form>
         </div>
