--- a/v6.2.1_express_temp_yt/views/addCreator.ejs
+++ b/v6.2.1_express_temp_yt/views/addCreator.ejs
@@ -2,21 +2,27 @@
 
 <%- include('./common/menu') -%>
 
-    <div class="contentDiv" id="content">
-        <h2 style="text-align:center">Creators</h2>
+<div class="contentDiv" id="content">
+    <h2 style="text-align:center">Add creator</h2>
 
+    <form method="post" enctype="multipart/form-data">
         <div class="card">
-            <label>Add profile picture (optional)</label>
+            <label for="profile">Add profile picture (optional)</label>
             <div id="addPicture">
-                <input type="file" id="fileInput" accept="image/*">
-              </div>
-            <p><input placeholder="Name"></p>
-            <p><input placeholder="Email"></p>
+                <input type="file" id="profile" name="profile" accept="image/*">
+            </div>
+            <label for="name">Name:</label>
+            <input id="name" name="name" placeholder="Name">
+
+            <label for="email">Email:</label>
+            <input id="email" name="email" placeholder="Email">
             <div>
                 <!--TODO kicserélni linket-->
-                <button>Add creator</button>
+                <!--<button type="submit" onclick="window.location.href='/creators'">Add creator</button> navigáció nem működik-->
+                <button type="submit" onclick="">Add creator</button> <!--navigáció nem működik-->
             </div>
         </div>
-    </div>
+    </form>
+</div>
 
 <%- include('./common/footer') -%>
