--- a/v7.0_mongo_yt/views/common/header.ejs
+++ b/v7.0_mongo_yt/views/common/header.ejs
@@ -7,7 +7,7 @@
     <title><%= page_title %></title>
 
     <!--TODO nem jó css ejs óta-->
-    <!--<link rel="stylesheet" href="../style.css">-->
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 <body>
