--- a/v7.0_mongo_yt/views/addCreator.ejs
+++ b/v7.0_mongo_yt/views/addCreator.ejs
@@ -17,9 +17,7 @@
             <label for="email">Email:</label>
             <input id="email" name="email" placeholder="Email">
             <div>
-                <!--TODO kicserélni linket-->
-                <!--<button type="submit" onclick="window.location.href='/creators'">Add creator</button> navigáció nem működik-->
-                <button type="submit" onclick="">Add creator</button> <!--navigáció nem működik-->
+                <button type="submit">Add creator</button> 
             </div>
         </div>
     </form>
