--- a/v7.0_mongo_yt/views/editCreator.ejs
+++ b/v7.0_mongo_yt/views/editCreator.ejs
@@ -1,30 +1,24 @@
-<%- include('./common/header', {page_title: "Edit Creator"}) -%>
+<%- include('./common/header', {page_title: "Edit Creator" }) -%>
 
-<%- include('./common/menu') -%>
+    <%- include('./common/menu') -%>
 
     <div class="contentDiv" id="content">
         <h2 style="text-align:center">Edit Creator</h2>
 
+        <form method="post" enctype="multipart/form-data">
         <div class="card">
-            <form method="post">
-            <label for="fileInput">Change profile picture (optional)</label>
-            <div id="addPicture">
-                <input type="file" id="fileInput" accept="image/*" name="profile_picture">
-            </div>
+
             <label for="name">Név</label>
-            <input type="text" value="<%= creator.name %>" id="name" name="name">
+            <input type="text" id="name" name="name" value="">
+
             <label for="email">Email</label>
-            <input type="text" value="<%= creator.email %>" id="email" name="email">
-            <p>Number of pictures: <%= creator.number_of_pictures %></p>
+            <input type="text" id="email" name="email" value="">
             <div>
-                <button type="button" onclick="window.location.href='/creators'">Cancel</button>
-                <!--<a href="/creators">Cancel</a> ha beteszem formba, akkorn nem működik-->
-                <input type="submit" onclick="window.location.href='/creators'" value="Update"/> <!--nem jó-->
+                <a href="/creators">Cancel</a>
+                <input type="submit" value="Update"/>
             </div>
-            </form>
         </div>
+        </form>
     </div>
 
-<%- include('./common/footer') -%>
-
-//54
+        <%- include('./common/footer') -%>
