--- a/v7.0_mongo_yt/views/addPicture.ejs
+++ b/v7.0_mongo_yt/views/addPicture.ejs
@@ -14,16 +14,21 @@
         <div id="selectCreator">
           <label for="creators">Choose a creator:</label>
           <select id="creators" name="creators">
-            <!--adatbázisból creator nevekkel feltölteni a optionokat-->
             <option value="">Existing creators</option>
-            <option value="test1">test1</option>
-            <option value="test2">test2</option>
+            <% creators.forEach(function(creator){ %>
+              <option value="<%= creator._id %>"><%= creator.name %></option>
+            <% }); %>
           </select>
           <button type="button" onclick="window.location.href='/addcreator'">Add new creator</button>
+
+          <label for="title">Title:</label>
+          <input id="title" name="title" placeholder="Title">
+
+          <label for="description">Description:</label>
+          <input id="description" name="description" placeholder="Description">
         </div>
         <div>
-          <!--TODO kicserélni linket-->
-          <button type="submit" onclick="">Add picture</button> <!--navigáció nem jó-->
+          <button type="submit">Add picture</button>
         </div>
       </form>
     </div>
