addPicture and update creators works!!!!!!!!!!!!!!!

--- a/v7.0.1_beadasra/views/common/menu.ejs
+++ b/v7.0.1_beadasra/views/common/menu.ejs
@@ -1,6 +1,5 @@
-<!--TODO nem jó-->
 <ul class="sidenav" id="menu">
-    <li><a href="/gallery">Gallery</a></li> <!--<li><a href="../gallery.ejs">Gallery</a></li>-->
+    <li><a href="/gallery">Gallery</a></li>
     <li><a href="/gallery/edit">Edit gallery</a></li>
     <li><a href="/addpicture">Add picture</a></li>
     <li><a href="/creators">Creators</a></li>
