--- a/v7.0.1_beadasra/views/editCreator.ejs
+++ b/v7.0.1_beadasra/views/editCreator.ejs
@@ -2,23 +2,24 @@
 
     <%- include('./common/menu') -%>
 
-    <div class="contentDiv" id="content">
-        <h2 style="text-align:center">Edit Creator</h2>
+        <div class="contentDiv" id="content">
+            <h2 style="text-align:center">Edit Creator</h2>
+            <div class="card">
+                <form method="post">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" value="<%= creator.name %>">
 
-        <form method="post" enctype="multipart/form-data">
-        <div class="card">
+                    <!--tehát egy egész napon arra ment el, hogy ezt megoldjam, nem tudtam megérteni, hogy hogyan lehet, hogy már az addpicturenél működik, azaz a <select id="creators" name="creators">, ezért a middlewareban req.body.creators-ból kapom meg az id-t.
+                        itt minden jól van elnevezve és a middlewareban is. Egyszerűen képtelen voltam elhinni, hogy nem működik ez. Ezért kitöröltem az egyik input mezőt és 1 db önmagában működött, visszaillesztettem a másikat és most már az is működik, de hogy miért, hogy????-->
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email" value="<%= creator.email %>">
 
-            <label for="name">Név</label>
-            <input type="text" id="name" name="name" value="">
-
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" value="">
-            <div>
-                <a href="/creators">Cancel</a>
-                <input type="submit" value="Update"/>
+                    <div>
+                        <a href="/creators">Cancel</a>
+                        <button type="submit">Update</button>
+                    </div>
+                </form>
             </div>
         </div>
-        </form>
-    </div>
 
         <%- include('./common/footer') -%>
