--- a/v7.0.1_beadasra/views/editGallery.ejs
+++ b/v7.0.1_beadasra/views/editGallery.ejs
@@ -17,7 +17,7 @@
           <a href="/gallery/edit/<%= picture._id %>"><button class="changeButton">Edit</button></a>
         </div>
         <div class="center">
-          <a href="/creators/delete/<%= creator._id %>"><button>Delete</button></a>
+          <a href="/picture/delete/<%= picture._id %>"><button>Delete</button></a>
         </div>
       </div>
     <% }) %>
