--- a/v7.0.1_beadasra/views/editPicture.ejs
+++ b/v7.0.1_beadasra/views/editPicture.ejs
@@ -21,7 +21,7 @@
               <p>Created by: <%= picture.created_by %></p>
               <div>
                 <a href="/gallery/edit">Cancel</a>
-                <input type="submit" value="Update"/>
+                <Button type="submit">Update</Button>
               </div>
             </div>
           </form>
